--- a/app/src/main/res/layout/recallsurvs2.xml
+++ b/app/src/main/res/layout/recallsurvs2.xml
@@ -2195,6 +2195,13 @@
                         android:paddingRight="10dp"
                         android:text="Don’t know/don’t remember"
                         android:textSize="20sp" />
+                    <RadioButton
+                        android:id="@+id/rdobbathtime5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="10dp"
+                        android:text="Bath was not done"
+                        android:textSize="20sp" />
                 </RadioGroup>
             </LinearLayout>
 
